--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+    <meta name="description" content="One of the leading logistics services provider for Export and Import trade by Sea, Air and Land">
     <meta name="author" content="">
 
-    <title>ZABU YADANAR - Customs Broke Agency</title>
+    <title>ZABU YADANAR - AUTHORIZED CUSTOMS BROKER AGENCY</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -17,12 +17,11 @@
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <!-- Theme CSS -->
-    <link href="css/agency.min.css" rel="stylesheet">
+    <link href="css/agency.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -75,7 +74,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Welcome To Our Customs Broker Agency!</div>
+                <div class="intro-lead-in">Welcome To Our Authorized Customs Broker Agency!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
@@ -86,9 +85,28 @@
     <section id="services">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <div class="col-lg-12 ">
+                    <h2 class="section-heading text-center">Services</h2>
+                    <div class="col-lg-8 col-lg-offset-2">
+                      <ul>
+                        <li>
+                          <h3 class="section-subheading text-muted">
+                            We provides a wide range of land, sea and air freight services that cover all your importing and exporting needs. 
+                          </h3>
+                        </li>
+                        <li>
+                            <h3 class="section-subheading text-muted">
+                              We can also help you with all those overwhelming customs documents as well, a process that can be lengthy and taxing if you don’t have the experiences that we do.
+                            </h3>
+                        </li>
+                        <li>
+                          <h3 class="section-subheading text-muted">
+                            Our customers will fell secured that their cargo is being handled carefully and professionally from picked to delivery at the destination. 
+                          </h3>
+                        </li>
+                      </ul>    
+                    </div>
+                    </h2>
                 </div>
             </div>
             <div class="row text-center">
@@ -97,24 +115,24 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-ship fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Sea Transportation</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Sea Freight</h4>
+                    <p class="text-muted">Include Calculating to know estimation landed item cost, getting shipments cleared at the border and so on.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-plane fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Air Transportation</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Air Freight</h4>
+                    <p class="text-muted">International Air Freight Forwarding is one of our services that offer customized options and time-definite shipments.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-truck fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Land Transportation</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Land Freight</h4>
+                    <p class="text-muted"> Providing Land Transportation services within Myanmar and able to transport all manner of freight by road.</p>
                 </div>
             </div>
         </div>
@@ -126,7 +144,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">You can see our services details by clicking the following.</h3>
                 </div>
             </div>
             <div class="row">
