--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="col-lg-12 ">
                     <h2 class="section-heading text-center">Services</h2>
                     <div class="col-lg-8 col-lg-offset-2">
-                      <ul>
+                      <ul style="list-style: none;">
                         <li>
                           <h3 class="section-subheading text-muted">
                             We provides a wide range of land, sea and air freight services that cover all your importing and exporting needs. 
@@ -144,7 +144,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">You can see our services details by clicking the following.</h3>
+                    <h5 class="text-muted">You can see our services details by clicking the following.</h3>
                 </div>
             </div>
             <div class="row">
@@ -158,8 +158,8 @@
                         <img src="img/portfolio/roundicons.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Example</h4>
-                        <p class="text-muted">Example</p>
+                        <h4>Air Freight</h4>
+                        <p class="text-muted">Service</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -172,8 +172,8 @@
                         <img src="img/portfolio/startup-framework.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Example</h4>
-                        <p class="text-muted">Example</p>
+                        <h4>Sea Freight</h4>
+                        <p class="text-muted">Service</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
@@ -186,8 +186,8 @@
                         <img src="img/portfolio/treehouse.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Example</h4>
-                        <p class="text-muted">Example</p>
+                        <h4>Land Freight</h4>
+                        <p class="text-muted">Service</p>
                     </div>
                 </div>
             </div>
@@ -200,7 +200,6 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
             <div class="row">
@@ -212,11 +211,10 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>Who We Are</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Zabu Yadanar Agency set up in Myanmar, we established as a Customs Clearance Agent in July 1988. The Founder and Managing Director is U Maung Maung Kywe who is Vice-Chairman of Myanmar Customs Brokers Association (MCBA).</p>
                                 </div>
                             </div>
                         </li>
@@ -226,11 +224,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>What We Do</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">We are exports and imports customs clearing agent for Sea, Air and Land Freight services in Myanmar. We provide a wide range of service including land, sea and air freight services which cover all your importing and exporting needs. We can also help you with all those overwhelming customs documents as well, a process that can be lengthy and taxing if you don’t have the experiences that we do. 
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -240,28 +238,16 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4>What We Provide</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Our customers will fell secured that their cargo is being handled carefully and professionally from picked to delivery at the destination.
+                                    Clients include international importer/exporter from Japan, Singapore, China, Malaysia, India, United Kingdom and Germany.
+                                    </p>
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                                </div>
-                            </div>
-                        </li>
+
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>Be Part
@@ -281,7 +267,26 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted contact-us"><i class="fa fa-map-marker" aria-hidden="true"></i>  No. (82), 37th Street, Lower block, 1st Floor, Kyauktada Township, Yangon, Myanmar.</h3>
+                    <div class="section-subheading text-muted contact-us">
+                      <div class= "row">
+                        <div class= "col-md-4">
+                          <a href="tel:+9595168696" >
+                            <i class="fa fa-phone" aria-hidden="true"></i>  +95 95168696
+                          </a>
+                        </div>
+                        <div class= "col-md-4">
+                          <a href="tel:+959253050556" >
+                          <i class="fa fa-phone" aria-hidden="true"></i> +95 9253050556
+                          </a>
+                        </div>
+                        <div class= "col-md-4">
+                          <a href="tel:+959254259619" >
+                            <i class="fa fa-phone" aria-hidden="true"></i> +95 9254259619
+                          </a>
+                        </div>
+                      </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -331,9 +336,20 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Project Name</h2>
-                                <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis maxime iusto laudantium iste nihil, consectetur illum quisquam molestiae necessitatibus placeat officia repudiandae sapiente quo, cupiditate ipsam ullam id fugiat similique.</p>
+                                <h2>Air Freight</h2>
+                                <p class="item-intro text-muted">Service</p>
+                                <ul> 
+                                  <li> Container Service</li>
+                                  <ul>
+                                    <li>
+                                      We handle Full Container Loads (FCL) and also Consolidations Cargo (LCL).We can also handle HEAVY/ OVERSIZED or DANGEROUS Cargoes.
+                                    </li> 
+                                  </ul>
+                                  <li>We calculate to know your estimated landed item cost.</li>
+                                  <li>We help to get shipments cleared at the border.</li>
+                                  <li>We assist to pull information together and clear the goods thorough customs.</li>
+                                  <li>We arrange to have your cargo picked up from its warehouse.</li>
+                                </ul>  
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
