--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/roundicons.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/startup-framework.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Air Freight</h4>
+                        <h4>Sea Freight</h4>
                         <p class="text-muted">Service</p>
                     </div>
                 </div>
@@ -169,10 +169,10 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/startup-framework.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/roundicons.jpg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Sea Freight</h4>
+                        <h4>Air Freight</h4>
                         <p class="text-muted">Service</p>
                     </div>
                 </div>
@@ -287,6 +287,7 @@
                         </div>
                       </div>
                     </div>
+                    <div id="map" style="width:800px;height:400px;margin:0 auto;">
                 </div>
             </div>
         </div>
@@ -336,7 +337,7 @@
                         <div class="col-lg-8 col-lg-offset-2">
                             <div class="modal-body">
                                 <!-- Project Details Go Here -->
-                                <h2>Air Freight</h2>
+                                <h2>Sea Freight</h2>
                                 <p class="item-intro text-muted">Service</p>
                                 <ul> 
                                   <li> Container Service</li>
@@ -358,7 +359,66 @@
             </div>
         </div>
     </div>
-
+    <!-- Portfolio Modal 2 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>Air Freight</h2>
+                                <p class="item-intro text-muted">Service</p>
+                                <ul> 
+                                  <li> International Air Freight Forwarding is one of our services that offer customized options and Time-Definite shipments.</li>
+                                  <li>Import Clearance of Cargo at the Discharge port Consolidation Services. </li>
+                                  <li>We collect and deliver door to door locally in Myanmar for air freight.</li>
+                                </ul>  
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Portfolio Modal 3 -->
+    <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal">
+                    <div class="lr">
+                        <div class="rl">
+                        </div>
+                    </div>
+                </div>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here -->
+                                <h2>Land Freight</h2>
+                                <p class="item-intro text-muted">Service</p>
+                                <ul> 
+                                  <li>We can provide Land Transportation Services within Myanmar.</li>
+                                  <li>We facilitate and transport various items, both Full truck load (FTL) and less than truck load (LCL) using our trucks locally.</li>
+                                  <li>We are able to transport all manner of freight by road.</li>
+                                </ul>  
+                                <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
 
@@ -371,6 +431,8 @@
     <!-- Contact Form JavaScript -->
     <!-- Theme JavaScript -->
     <script src="js/agency.min.js"></script>
+    <script src="js/application.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?callback=myMap"></script>
 
 </body>
 
